# mcap2csv

./: LICENSE  README.md  mcap2csv.py  setup.cfg
