[metadata]
name = mcap2csv
version = 0.1.0
description = Convert ROS2 MCAP bag files to CSV files, one per topic.
author = jjnak
license = LICENSE
readme = README.md

[options]
python_requires = >=3.8
install_requires =
    mcap-ros2-support
    numpy
    pandas

[options.entry_points]
console_scripts =
    mcap2csv = mcap2csv:main
